The following bugs have been fixed in the 1.5.2 release.

K  5820	allow IMAP search to throw SearchException when search is too complex
K  6181	NullPointerException at IMAPFolder#getMessagesByUID if msg not found
K  6201	add option to use canonical host name for SASL
K  6203	IMAP astring parsing incorrect
K  6207	SMTP SASL support doesn't handle authentication failure properly


		  CHANGES IN THE 1.5.1 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.5.1 release.

K  5924	IMAP provider should support the QRESYNC extension (RFC 5162)
K  5925	IMAP provider should support the WITHIN search extension (RFC 5032)
K  5933	JavaMail does not handle write timeouts
K  5934	method fill() isn't synchronized correctly in SharedFileInputStream
K  5978	NullPointerException in MimeUtility#quote()
K  5987	support RFC 2359 COPYUID response code
K  5989	Empty FROM Field causes Exception
K  6004	Filename isn't parsed correctly if charset is not set
K  6072	copying a DataHandler from a parsed message to a new message fails
K  6102	MimeMessage does not unfold address headers before parsing them
K  6108	When using XGWTRUSTEDAPP mechanism, LOGIN should not be issued if no
	authzid is specified
K  6125	support empty IMAP ENVELOPE address list instead of NIL
K  6137	JavaMail should support the IMAP ID extension
K  6141	Typo: "mechansims"
K  6160	Exchange returns out of range message numbers for SEARCH
K  6161	require extra permission to create default Session with SecurityManager


		  CHANGES IN THE 1.5.0 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.5.0 release.

K  5682	add FetchProfile.Item.SIZE
K  5683	fix protected fields in final classes in javax.mail.search
K  5684	add MimeMultipart(String subtype, BodyPart... bps) constructor
K  5685	exceptions should support exception chaining
K  5686	ParameterList needs to support use by IMAP
K  5687	ContentType.toString & ContentDisposition.toString shouldn't return null